# serde

./: .editorconfig  .travis.yml  CMakeLists.txt  README.md  keywords.txt  library.json  library.properties
examples/Commander/: Commander.ino
examples/CommanderCalculator/: CommanderCalculator.ino
examples/CommanderRemoteIO/: CommanderRemoteIO.ino
examples/CommanderRobot/: CommanderRobot.ino
examples/DifferentTypesForTXandRX/: DifferentTypesForTXandRX.ino
examples/NestedData/: NestedData.ino
examples/Receiving/: Receiving.ino
examples/ReceivingWithCallback/: ReceivingWithCallback.ino
examples/Sending/: Sending.ino
examples/UnionsRX/: UnionsRX.ino
examples/UnionsTX/: UnionsTX.ino
src/: CMakeLists.txt  serde-commander.h  serde-macros.h  serde.h
tests/mocks/: CMakeLists.txt  test-mocks_Defs.h  test-mocks_SerialMock.h  test-mocks_SerialMock.hpp
tests/unit-tests/: CMakeLists.txt
tests/unit-tests/tests/: unit-tests_SerdeLoopback.cpp  unit-tests_SerdePacket.cpp  unit-tests_SerdeRx.cpp  unit-tests_SerdeTx.cpp  unit-tests_SerialMock.cpp
